--- a/galaxy.yml
+++ b/galaxy.yml
@@ -12,6 +12,7 @@ dependencies:
   community.crypto: ">=2.2.3"
   community.general: ">=4.5.0"
   kubernetes.core: ">=2.3.2"
+  vexxhost.kubernetes: ">=1.10.0"
 tags:
   - application
   - cloud
