fix: add socket file and daemon configs

--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -39,7 +39,10 @@ docker_state_dir: /run/docker
 docker_oom_score: 0
 
 docker_debug_level: "info"
-docker_max_log_size: -1
+docker_max_log_size: "50m"
+docker_max_log_file: "5"
+docker_use_iptables: "false"
+docker_ip_forward: "false"
 
 docker_limit_proc_num: "infinity"
 docker_limit_core: "infinity"
