--- a/roles/docker/meta/main.yml
+++ b/roles/docker/meta/main.yml
@@ -41,6 +41,11 @@ dependencies:
     download_artifact_mode: "0755"
     download_artifact_unarchive: true
     download_artifact_unarchive_dest: /usr/bin
+    download_artifact_unarchive_include:
+      - docker/docker
+      - docker/docker-init
+      - docker/dockerd
+      - docker/docker-proxy
     download_artifact_unarchive_extra_opts:
       - --strip-components=1
     download_artifact_notify:
