chore: Add docker molecule scenario

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -28,6 +28,7 @@ jobs:
       matrix:
         scenario:
           - containerd
+          - docker
         distro:
           - rockylinux8
           - rockylinux9
