--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -12,8 +12,28 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-- name: Converge
-  hosts: all
-  become: true
-  roles:
-    - vexxhost.containers.containerd
+dependency:
+  name: galaxy
+driver:
+  name: docker
+platforms:
+  - name: instance
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    privileged: true
+    cgroupns_mode: host
+    pre_build_image: true
+    environment:
+      container: docker
+    security_opts:
+      - apparmor=unconfined
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - /lib/modules:/lib/modules:ro
+provisioner:
+  name: ansible
+  config_options:
+    connection:
+      pipelining: true
+verifier:
+  name: ansible
