--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -39,6 +39,7 @@
   with_items:
     - path: "{{ docker_cfg_dir }}"
     - path: "{{ docker_storage_dir }}"
+      mode: "0o710"
     - path: "{{ docker_state_dir }}"
       mode: "0o711"
   notify:
@@ -68,12 +69,3 @@
     mode: "0644"
   notify:
     - Restart docker
-
-- name: Force any restarts if necessary
-  ansible.builtin.meta: flush_handlers
-
-- name: Enable and start service
-  ansible.builtin.service:
-    name: docker
-    enabled: true
-    state: started
