--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -19,11 +19,18 @@
       - apparmor
       - apparmor-utils
   when: ansible_facts['os_family'] == "Debian"
+  
+- name: Ensure group "docker" exists
+  ansible.builtin.group:
+    name: docker
+    state: present
 
 - name: Create systemd service file for docker
-  ansible.builtin.template:
-    src: docker.service.j2
+  ansible.builtin.copy:
+    src: docker.service
     dest: /etc/systemd/system/docker.service
+    owner: root
+    group: docker
     mode: "0644"
   notify:
     - Reload systemd
@@ -35,7 +42,7 @@
     state: directory
     mode: "{{ item.mode | default('0o755') }}"
     owner: root
-    group: root
+    group: docker
   with_items:
     - path: "{{ docker_cfg_dir }}"
     - path: "{{ docker_storage_dir }}"
@@ -45,27 +52,20 @@
   notify:
     - Restart docker
 
-- name: Install "iptables" package
-  ansible.builtin.package:
-    name: iptables
-    state: present
-  when: docker_use_iptables | bool
-
 - name: Create systemd socket file for docker
-  ansible.builtin.template:
-    src: docker.socket.j2
+  ansible.builtin.copy:
+    src: docker.socket
     dest: /usr/lib/systemd/system/docker.socket
+    owner: root
+    group: docker
     mode: "0644"
   notify:
     - Reload systemd
     - Restart docker
 
-- name: Create docker config file
-  ansible.builtin.template:
-    src: daemon.json.j2
+- name: Create docker daemon config file
+  ansible.builtin.copy:
+    content: "{{ _docker_config | combine(docker_config, recursive=True) | to_nice_json }}"  # noqa: yaml[line-length]
     dest: "{{ docker_cfg_file }}"
-    owner: root
-    group: root
-    mode: "0644"
   notify:
     - Restart docker
