--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -19,7 +19,7 @@
       - apparmor
       - apparmor-utils
   when: ansible_facts['os_family'] == "Debian"
-  
+
 - name: Ensure group "docker" exists
   ansible.builtin.group:
     name: docker
@@ -61,5 +61,7 @@
   ansible.builtin.copy:
     content: "{{ _docker_config | combine(docker_config, recursive=True) | to_nice_json }}"  # noqa: yaml[line-length]
     dest: "{{ docker_cfg_file }}"
+    owner: root
+    group: root
   notify:
     - Restart docker
