--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -61,7 +61,6 @@
   ansible.builtin.copy:
     content: "{{ _docker_config | combine(docker_config, recursive=True) | to_nice_json }}"  # noqa: yaml[line-length]
     dest: "{{ docker_cfg_file }}"
-    owner: root
-    group: root
+    mode: "0644"
   notify:
     - Restart docker
