--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -64,3 +64,12 @@
     mode: "0644"
   notify:
     - Restart docker
+
+- name: Force any restarts if necessary
+  ansible.builtin.meta: flush_handlers
+
+- name: Enable and start service
+  ansible.builtin.service:
+    name: docker
+    enabled: true
+    state: started
