--- a/roles/containerd/defaults/main.yml
+++ b/roles/containerd/defaults/main.yml
@@ -61,3 +61,7 @@ containerd_limit_core: "infinity"
 #                 ulimit nofile to a more reasonable value.
 containerd_limit_open_file_num: "{{ '1048576' if ansible_facts['os_family'] == 'RedHat' else 'infinity' }}"
 containerd_limit_mem_lock: "infinity"
+
+# NOTE(jrosser): If you need to override the default containerd snapshotter, for example
+# when the underlying filesystem does not support overlayfs, set it here
+containerd_snapshotter: ""
