--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -29,6 +29,7 @@ jobs:
         scenario:
           - containerd
           - docker
+          - nerdctl
         distro:
           - rockylinux8
           - rockylinux9
