--- a/roles/containerd/defaults/main.yml
+++ b/roles/containerd/defaults/main.yml
@@ -62,6 +62,10 @@ containerd_limit_core: "infinity"
 containerd_limit_open_file_num: "{{ '1048576' if ansible_facts['os_family'] == 'RedHat' else 'infinity' }}"
 containerd_limit_mem_lock: "infinity"
 
+containerd_http_proxy: "{{ http_proxy | default('') }}"
+containerd_https_proxy: "{{ https_proxy | default('') }}"
+containerd_no_proxy: "{{ no_proxy | default('') }}"
+
 # NOTE(jrosser): If you need to override the default containerd snapshotter, for example
 # when the underlying filesystem does not support overlayfs, set it here
 containerd_snapshotter: ""
