--- a/roles/cri_tools/defaults/main.yml
+++ b/roles/cri_tools/defaults/main.yml
@@ -12,16 +12,21 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-cri_tools_version: v1.28.0
+cri_tools_crictl_versions: "{{ cri_tools_crictl_checksums['amd64'].keys() | list | community.general.version_sort }}"
+cri_tools_crictl_version: "{{ cri_tools_crictl_versions | last }}"
+
 cri_tools_crictl_checksums:
   amd64:
     v1.28.0: 8dc78774f7cbeaf787994d386eec663f0a3cf24de1ea4893598096cb39ef2508
   arm64:
     v1.28.0: 1ea267f3872f4b7f311963ab43ce6653ceeaf8727206c889b56587c95497e9dd
 
-cri_tools_crictl_download_url: "https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ cri_tools_version }}/crictl-{{ cri_tools_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
-cri_tools_crictl_download_dest: "{{ download_artifact_work_directory }}/crictl-{{ cri_tools_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
-cri_tools_crictl_archive_checksum: "{{ cri_tools_crictl_checksums[download_artifact_goarch][cri_tools_version] }}"
+cri_tools_crictl_download_url: "https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ cri_tools_crictl_version }}/crictl-{{ cri_tools_crictl_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
+cri_tools_crictl_download_dest: "{{ download_artifact_work_directory }}/crictl-{{ cri_tools_crictl_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
+cri_tools_crictl_archive_checksum: "{{ cri_tools_crictl_checksums[download_artifact_goarch][cri_tools_crictl_version] }}"
+
+cri_tools_critest_versions: "{{ cri_tools_critest_checksums['amd64'].keys() | list | community.general.version_sort }}"
+cri_tools_critest_version: "{{ cri_tools_critest_versions | last }}"
 
 cri_tools_critest_checksums:
   amd64:
@@ -29,9 +34,9 @@ cri_tools_critest_checksums:
   arm64:
     v1.28.0: 12ac3a1e21e136aae037e98fe37ec3264956793ec450af611c9bab3d60486656
 
-cri_tools_critest_download_url: "https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ cri_tools_version }}/critest-{{ cri_tools_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
-cri_tools_critest_download_dest: "{{ download_artifact_work_directory }}/critest-{{ cri_tools_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
-cri_tools_critest_archive_checksum: "{{ cri_tools_critest_checksums[download_artifact_goarch][cri_tools_version] }}"
+cri_tools_critest_download_url: "https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ cri_tools_critest_version }}/critest-{{ cri_tools_critest_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
+cri_tools_critest_download_dest: "{{ download_artifact_work_directory }}/critest-{{ cri_tools_critest_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}.tar.gz" # noqa: yaml[line-length]
+cri_tools_critest_archive_checksum: "{{ cri_tools_critest_checksums[download_artifact_goarch][cri_tools_critest_version] }}"
 
 # NOTE(mnaser): This is to accomodate for the uninstallation of the old packages
 #               that shipped with the operating system
