--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -26,8 +26,8 @@
     state: present
 
 - name: Create systemd service file for docker
-  ansible.builtin.copy:
-    src: docker.service
+  ansible.builtin.template:
+    src: docker.service.j2
     dest: /etc/systemd/system/docker.service
     mode: "0644"
   notify:
