--- a/zuul.d/playbooks/molecule/run.yml
+++ b/zuul.d/playbooks/molecule/run.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 VEXXHOST, Inc.
+# Copyright (c) 2024 VEXXHOST, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"); you may
 # not use this file except in compliance with the License. You may obtain
@@ -12,17 +12,7 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-- name: Prepare
-  hosts: all
+- hosts: all
   become: true
-  tasks:
-    - name: Install NGINX
-      ansible.builtin.package:
-        name: nginx
-        state: present
-
-    - name: Ensure NGINX is running
-      ansible.builtin.service:
-        name: nginx
-        state: started
-        enabled: true
+  roles:
+    - tox
