--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -12,13 +12,84 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
+- job:
+    name: ansible-collection-kubernetes-molecule
+    parent: tox
+    abstract: true
+    pre-run: zuul.d/playbooks/molecule/pre.yml
+    run: zuul.d/playbooks/molecule/run.yml
+
+- job:
+    name: ansible-collection-kubernetes-molecule-focal
+    parent: ansible-collection-kubernetes-molecule
+
+- job:
+    name: ansible-collection-kubernetes-molecule-focal-containerd
+    parent: ansible-collection-kubernetes-molecule-focal
+    vars:
+      tox_envlist: molecule-containerd
+
+- job:
+    name: ansible-collection-kubernetes-molecule-focal-docker
+    parent: ansible-collection-kubernetes-molecule-focal
+    vars:
+      tox_envlist: molecule-docker
+
+- job:
+    name: ansible-collection-kubernetes-molecule-focal-forget-package
+    parent: ansible-collection-kubernetes-molecule-focal
+    vars:
+      tox_envlist: molecule-forget-package
+
+- job:
+    name: ansible-collection-kubernetes-molecule-focal-nerdctl
+    parent: ansible-collection-kubernetes-molecule-focal
+    vars:
+      tox_envlist: molecule-nerdctl
+
+- job:
+    name: ansible-collection-kubernetes-molecule-jammy
+    parent: ansible-collection-kubernetes-molecule
+
+- job:
+    name: ansible-collection-kubernetes-molecule-jammy-containerd
+    parent: ansible-collection-kubernetes-molecule-jammy
+    vars:
+      tox_envlist: molecule-containerd
+
+- job:
+    name: ansible-collection-kubernetes-molecule-jammy-docker
+    parent: ansible-collection-kubernetes-molecule-jammy
+    vars:
+      tox_envlist: molecule-docker
+
+- job:
+    name: ansible-collection-kubernetes-molecule-jammy-nerdctl
+    parent: ansible-collection-kubernetes-molecule-jammy
+    vars:
+      tox_envlist: molecule-nerdctl
+
 - project:
     merge-mode: squash-merge
     check:
       jobs:
+        - ansible-collection-kubernetes-molecule-focal-containerd
+        - ansible-collection-kubernetes-molecule-focal-docker
+        - ansible-collection-kubernetes-molecule-focal-forget-package
+        - ansible-collection-kubernetes-molecule-focal-nerdctl
+        - ansible-collection-kubernetes-molecule-jammy-containerd
+        - ansible-collection-kubernetes-molecule-jammy-docker
+        - ansible-collection-kubernetes-molecule-jammy-nerdctl
         - build-ansible-collection
     gate:
       jobs:
+        - ansible-collection-kubernetes-molecule-focal-containerd
+        - ansible-collection-kubernetes-molecule-focal-docker
+        - ansible-collection-kubernetes-molecule-focal-forget-package
+        - ansible-collection-kubernetes-molecule-focal-nerdctl
+        - ansible-collection-kubernetes-molecule-jammy-containerd
+        - ansible-collection-kubernetes-molecule-jammy-docker
+        - ansible-collection-kubernetes-molecule-jammy-nerdctl
         - build-ansible-collection
     release:
       jobs:
