--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -22,6 +22,10 @@
 - job:
     name: ansible-collection-kubernetes-molecule-focal
     parent: ansible-collection-kubernetes-molecule
+    nodeset:
+      nodes:
+        - name: ubuntu-focal
+          label: focal-2c-8g
 
 - job:
     name: ansible-collection-kubernetes-molecule-focal-containerd
@@ -50,6 +54,10 @@
 - job:
     name: ansible-collection-kubernetes-molecule-jammy
     parent: ansible-collection-kubernetes-molecule
+    nodeset:
+      nodes:
+        - name: ubuntu-jammy
+          label: jammy-2c-8g
 
 - job:
     name: ansible-collection-kubernetes-molecule-jammy-containerd
