Install PIP from upstream

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -106,6 +106,9 @@
 - job:
     name: ansible-collection-kubernetes-molecule-rockylinux9
     parent: ansible-collection-kubernetes-molecule
+    vars:
+      # NOTE(mnaser): `python3-wheel` is not available on Rocky 9.
+      ensure_pip_from_upstream: true
     nodeset:
       nodes:
         - name: rockylinux9
