--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
 skipsdist = True
 
+[testenv:linters]
+deps =
+  pre-commit
+commands =
+  pre-commit run --all-files --show-diff-on-failure
+
 [testenv:molecule-venv]
 deps =
   molecule
