--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,12 @@ deps =
 commands =
   molecule test -s docker
 
+[testenv:molecule-download-binaries]
+deps =
+  {[testenv:molecule-venv]deps}
+commands =
+  molecule test -s download-binaries
+
 [testenv:molecule-forget-package]
 deps =
   {[testenv:molecule-venv]deps}
