--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -24,6 +24,12 @@
     run: zuul.d/playbooks/molecule/run.yml
 
 - job:
+    name: ansible-collection-containers-molecule-download-binaries
+    parent: ansible-collection-containers-molecule
+    vars:
+      tox_envlist: molecule-download-binaries
+
+- job:
     name: ansible-collection-containers-molecule-focal
     parent: ansible-collection-containers-molecule
     vars:
@@ -178,6 +184,7 @@
     check:
       jobs:
         - ansible-collection-containers-linters
+        - ansible-collection-containers-molecule-download-binaries
         - ansible-collection-containers-molecule-focal-containerd
         - ansible-collection-containers-molecule-focal-docker
         - ansible-collection-containers-molecule-focal-forget-package
@@ -198,6 +205,7 @@
     gate:
       jobs:
         - ansible-collection-containers-linters
+        - ansible-collection-containers-molecule-download-binaries
         - ansible-collection-containers-molecule-focal-containerd
         - ansible-collection-containers-molecule-focal-docker
         - ansible-collection-containers-molecule-focal-forget-package
