--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,23 +34,72 @@ jobs:
         with:
           report_paths: /home/runner/.ansible/collections/ansible_collections/vexxhost/containers/tests/output/junit/*.xml
 
-  molecule:
-    runs-on: ${{ matrix.distro }}
+  debian:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        distro:
-          - ubuntu-22.04
-          - ubuntu-24.04
+        version:
+          - 12
         scenario:
-          - containerd
-          - docker
-          - download-binaries
-          - forget-package
+          # - containerd
+          # - docker
+          # - download-binaries
+          # - forget-package
           - nerdctl
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
       - run: sudo swapoff -a
-      - name: Run Molecule
-        run: uv run molecule test -s ${{ matrix.scenario }}
+      - run: uv run molecule test -s ${{ matrix.scenario }}
+        env:
+          MOLECULE_DISTRO_ID: debian
+          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
+
+  el:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - 8
+          - 9
+          - 10
+        scenario:
+          # - containerd
+          # - docker
+          # - download-binaries
+          # - forget-package
+          - nerdctl
+    steps:
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+      - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
+      - run: sudo swapoff -a
+      - run: uv run molecule test -s ${{ matrix.scenario }}
+        env:
+          MOLECULE_DISTRO_ID: el
+          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
+
+  ubuntu:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - 20.04
+          - 22.04
+          - 24.04
+        scenario:
+          # - containerd
+          # - docker
+          # - download-binaries
+          # - forget-package
+          - nerdctl
+    steps:
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+      - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
+      - run: sudo swapoff -a
+      - run: uv run molecule test -s ${{ matrix.scenario }}
+        env:
+          MOLECULE_DISTRO_ID: el
+          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
