fix: update MOLECULE_DISTRO_ID to ubuntu for molecule tests 🐛
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,5 +101,5 @@ jobs:
       - run: sudo swapoff -a
       - run: uv run molecule test -s ${{ matrix.scenario }}
         env:
-          MOLECULE_DISTRO_ID: el
+          MOLECULE_DISTRO_ID: ubuntu
           MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
