--- a/molecule/nerdctl/molecule.yml
+++ b/molecule/nerdctl/molecule.yml
@@ -8,6 +8,7 @@ driver:
 platforms:
   - name: instance
     image: "quay.io/gotmax23/${MOLECULE_DISTRO_ID:-debian}-systemd:${MOLECULE_DISTRO_VERSION_ID:-bookworm}"
+    pre_build_image: true
 provisioner:
   name: ansible
   config_options:
