fix: update prepare.yml to use tasks instead of roles for apt cache 🐛
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/nerdctl/prepare.yml
+++ b/molecule/nerdctl/prepare.yml
@@ -15,7 +15,9 @@
 - name: Prepare all hosts
   hosts: all
   become: true
-  roles:
+  tasks:
     - name: Update "apt" cache
-      apt:
+      ansible.builtin.apt:
         update_cache: true
+      when:
+        - ansible_distribution == "Debian"
