--- a/molecule/nerdctl/prepare.yml
+++ b/molecule/nerdctl/prepare.yml
@@ -20,4 +20,4 @@
       ansible.builtin.apt:
         update_cache: true
       when:
-        - ansible_distribution == "Debian"
+        - ansible_os_family == "Debian"
