fix: add missing override_command in molecule.yml configuration 🐛
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/molecule/nerdctl/molecule.yml
+++ b/molecule/nerdctl/molecule.yml
@@ -9,6 +9,7 @@ platforms:
   - name: instance
     image: "quay.io/gotmax23/${MOLECULE_DISTRO_ID:-debian}-systemd:${MOLECULE_DISTRO_VERSION_ID:-bookworm}"
     pre_build_image: true
+    override_command: false
     tmpfs:
       - /var/lib/containerd
 provisioner:
