--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,71 +34,42 @@ jobs:
         with:
           report_paths: /home/runner/.ansible/collections/ansible_collections/vexxhost/containers/tests/output/junit/*.xml
 
-  debian:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - 12
-        scenario:
-          # - containerd
-          # - docker
-          # - download-binaries
-          # - forget-package
-          - nerdctl
-    steps:
-      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
-      - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
-      - run: sudo swapoff -a
-      - run: uv run molecule test -s ${{ matrix.scenario }}
-        env:
-          MOLECULE_DISTRO_ID: debian
-          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
+  # debian:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       version:
+  #         - 12
+  #       scenario:
+  #         # - containerd
+  #         # - docker
+  #         # - download-binaries
+  #         # - forget-package
+  #         - nerdctl
+  #   steps:
+  #     - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+  #     - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
+  #     - run: sudo swapoff -a
+  #     - run: uv run molecule test -s ${{ matrix.scenario }}
+  #       env:
+  #         MOLECULE_DISTRO_ID: debian
+  #         MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
 
-  el:
+  nerdctl:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - 9
-          - 10
-        scenario:
-          # - containerd
-          # - docker
-          # - download-binaries
-          # - forget-package
-          - nerdctl
+        distro:
+          - debian13
+          - rockylinux9
+          - rockylinux10
+          - ubuntu2204
+          - ubuntu2404
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
-      - run: sudo swapoff -a
-      - run: uv run molecule test -s ${{ matrix.scenario }}
+      - run: uv run molecule test -s nerdctl
         env:
-          MOLECULE_DISTRO_ID: el
-          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
-
-  ubuntu:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - 20.04
-          - 22.04
-          - 24.04
-        scenario:
-          # - containerd
-          # - docker
-          # - download-binaries
-          # - forget-package
-          - nerdctl
-    steps:
-      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
-      - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
-      - run: sudo swapoff -a
-      - run: uv run molecule test -s ${{ matrix.scenario }}
-        env:
-          MOLECULE_DISTRO_ID: ubuntu
-          MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
+          MOLECULE_DISTRO: ${{ matrix.distro }}
