--- a/molecule/nerdctl/molecule.yml
+++ b/molecule/nerdctl/molecule.yml
@@ -7,17 +7,13 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: "quay.io/gotmax23/${MOLECULE_DISTRO_ID:-debian}-systemd:${MOLECULE_DISTRO_VERSION_ID:-bookworm}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-debian13}-ansible
     pre_build_image: true
     override_command: false
-    tmpfs:
-      - /run
-      - /run/lock
-      - /tmp
-      - /sys/fs/cgroup/systemd
-      - /var/lib/journal
+    privileged: true
+    cgroupns_mode: host
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
 provisioner:
   name: ansible
   config_options:
