--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
           - debian13
           - rockylinux9
           - rockylinux10
+          - ubuntu2004
           - ubuntu2204
           - ubuntu2404
     steps:
