fix: remove become directive from converge, prepare, and verify tasks 🐛
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
   #         MOLECULE_DISTRO_ID: debian
   #         MOLECULE_DISTRO_VERSION_ID: ${{ matrix.version }}
 
-  nerdctl:
+  molecule:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -68,9 +68,11 @@ jobs:
           - ubuntu2004
           - ubuntu2204
           - ubuntu2404
+        scenario:
+          - nerdctl
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       - uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
-      - run: uv run molecule test -s nerdctl
+      - run: uv run molecule test -s ${{ matrix.scenario }}
         env:
           MOLECULE_DISTRO: ${{ matrix.distro }}
